--- a/app/prod/logstash/test/goss.yaml
+++ b/app/prod/logstash/test/goss.yaml
@@ -9,10 +9,10 @@ http:
     status: 200
     timeout: 2000
     body:
-      - '"host" : "helm-logstash-default-logstash-0"'
+      - '"host" : "helm-logstash-elasticsearch-logstash-0"'
       - '"version" : "7.9.0"'
       - '"http_address" : "0.0.0.0:9600"'
-      - '"name" : "helm-logstash-default-logstash-0"'
+      - '"name" : "helm-logstash-elasticsearch-logstash-0"'
       - '"status" : "green"'
       - '"workers" : 1'
       - '"batch_size" : 125'
@@ -22,12 +22,12 @@ file:
   /usr/share/logstash/config/logstash.yml:
     exists: true
     mode: "0644"
-    owner: logstash
-    group: root
+    owner: root
+    group: logstash
     filetype: file
     contains:
-      - 'http.host: "0.0.0.0"'
-      - 'xpack.monitoring.elasticsearch.hosts: [ "http://elasticsearch:9200" ]'
+      - 'http.host: 0.0.0.0'
+      - 'xpack.monitoring'
   /usr/share/logstash/pipeline/logstash.conf:
     exists: true
     mode: "0644"
