change for change sake

--- a/app/prod/elasticsearch/values.yaml
+++ b/app/prod/elasticsearch/values.yaml
@@ -36,7 +36,7 @@ extraEnvs:
 
 #esConfig:
 #  elasticsearch.yml: |
-##    node.rack: rack123
+#    node.rack: rack123
 
 #esConfig:
 #  elasticsearch.yml: |
