--- a/app/prod/elasticsearch/values.yaml
+++ b/app/prod/elasticsearch/values.yaml
@@ -34,9 +34,14 @@ extraEnvs:
         name: elastic-config-credentials
         key: username
 
-#esConfig:
-#  elasticsearch.yml: |
-#    node.rack: rack123
+esConfig:
+  elasticsearch.yml: |
+    cluster.name: "challenge-cluster"
+    network.host: "0.0.0.0"
+    bootstrap.memory_lock: false
+    xpack.security.enabled: false
+    xpack.monitoring.enabled: false
+
 #
 #esConfig:
 #  elasticsearch.yml: |
