a small change to logstash

--- a/app/prod/kibana/values.yaml
+++ b/app/prod/kibana/values.yaml
@@ -36,3 +36,8 @@ readinessProbe:
   successThreshold: 3
   timeoutSeconds: 5
 
+kibanaConfig:
+  kibana.yml: |
+    server.name: challenge-kibana
+    server.host: "0.0.0.0"
+    status.allowAnonymous: true
