--- a/app/prod/tests/perf/Dockerfile
+++ b/app/prod/tests/perf/Dockerfile
@@ -6,4 +6,4 @@ ADD . /app/
 RUN pip install -r requirements.txt
 
 EXPOSE 5000
-CMD ["python", "/app/perf-test.py"]
+CMD ["python", "/app/perf_test.py"]
