--- a/app/prod/logstash/values.yaml
+++ b/app/prod/logstash/values.yaml
@@ -11,4 +11,4 @@ logstashPipeline:
     input { exec { command => "uptime" interval => 30 } }
     output { elasticsearch { hosts => ["http://elasticsearch-master:9200"] index => "logstash" } }
 
-# some change
+# some other change
